@@ -27,10 +27,12 @@ Adapter classes
   PACKAGE_ADAPTER_V1
   PACKAGE_METADATA_PARTIAL
   PACKAGE_FORMAT_MISMATCH
+  PACKAGE_PLUGIN_REQUIRED
+  PACKAGE_PLUGIN_UNAVAILABLE
   PACKAGE_SIGNING_INFO_UNAVAILABLE
   EXECUTION_WITHHELD_INSTALLER
 - Route strictness:
-  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header, invalid `.exe` PE header, invalid ZIP-backed package containers such as `.msix/.nupkg/.whl/.jar`, invalid `.deb`/`.rpm` container/header evidence, or invalid `.appimage`/`.pkg`/`.dmg` header-trailer evidence).
+  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header, invalid `.exe` PE header, invalid ZIP-backed package containers such as `.msix/.nupkg/.whl/.jar`, invalid `.deb`/`.rpm` container/header evidence, or invalid `.appimage`/`.pkg`/`.dmg` header-trailer evidence). Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
 
 3) extension
 - Formats: .crx, .vsix, .xpi, unpacked extension folder with manifest.json
