@@ -14,6 +14,8 @@ Package/Installer
 - PACKAGE_ADAPTER_V1
 - PACKAGE_METADATA_PARTIAL
 - PACKAGE_FORMAT_MISMATCH
+- PACKAGE_PLUGIN_REQUIRED
+- PACKAGE_PLUGIN_UNAVAILABLE
 - PACKAGE_SIGNING_INFO_PRESENT
 - PACKAGE_SIGNING_INFO_UNAVAILABLE
 - EXECUTION_WITHHELD_INSTALLER
